--- a/CulturalCenterLibrary/app/build.gradle
+++ b/CulturalCenterLibrary/app/build.gradle
@@ -33,18 +33,17 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.9.0'
     def camerax_version = "1.3.0-alpha03"
+    implementation 'androidx.camera:camera-core:1.2.1'
+    implementation 'androidx.camera:camera-lifecycle:1.2.1'
+    implementation 'androidx.camera:camera-view:1.2.1'
+    implementation "androidx.camera:camera-camera2:1.2.1"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'io.github.g0dkar:qrcode-kotlin-jvm:3.3.0'
-    implementation 'com.google.zxing:core:3.5.0'
-    implementation 'com.journeyapps:zxing-android-embedded:3.5.0@aar'
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.3.0-alpha03"
+    implementation 'com.google.zxing:core:3.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
