--- a/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
+++ b/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
@@ -2,10 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-feature android:name="android.hardware.camera.*" />
+
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +18,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CulturalCenterLibrary"
         tools:targetApi="31">
+        <activity
+            android:name=".BarcodeScannerActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="barcode" />
+
+        <activity
+            android:name=".MenuScreenActivity"
+            android:exported="false" />
         <activity
             android:name=".QRLoginActivity"
             android:exported="false" />
