--- a/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
+++ b/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
@@ -9,15 +9,21 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
     <application
-        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.CulturalCenterLibrary"
         tools:targetApi="31">
+        <activity
+            android:name=".ScanningActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookScannerActivity"
+            android:exported="false" />
         <activity
             android:name=".BarcodeScannerActivity"
             android:exported="false" />
