--- a/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
+++ b/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.CulturalCenterLibrary"
         tools:targetApi="31">
         <activity
+            android:name=".listActivity"
+            android:exported="false" />
+        <activity
             android:name=".ScanningActivity"
             android:exported="false" />
         <activity
