--- a/CulturalCenterLibrary/app/build.gradle
+++ b/CulturalCenterLibrary/app/build.gradle
@@ -30,10 +30,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     def camerax_version = "1.3.0-alpha03"
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.camera:camera-core:1.2.1'
     implementation 'androidx.camera:camera-lifecycle:1.2.1'
     implementation 'androidx.camera:camera-view:1.2.1'
