--- a/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
+++ b/CulturalCenterLibrary/app/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CulturalCenterLibrary"
         tools:targetApi="31">
+        <receiver
+            android:name=".bookCardview"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/book_cardview_info" />
+        </receiver>
+
         <activity
             android:name=".listActivity"
             android:exported="false" />
