--- a/CulturalCenterLibrary/app/build.gradle
+++ b/CulturalCenterLibrary/app/build.gradle
@@ -37,6 +37,7 @@ android {
 
 dependencies {
     def camerax_version = "1.3.0-alpha03"
+    implementation 'com.google.api-client:google-api-client:1.33.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.camera:camera-core:1.2.1'
     implementation 'androidx.camera:camera-lifecycle:1.2.1'
